@@ -1,3 +1,7 @@
+2001-04-11  Martin Baulig  <baulig@suse.de>
+
+	* gnome-util.h (g_file_exists): Removed; use g_file_test() instead.
+
 2001-03-24  Martin Baulig  <baulig@suse.de>
 
 	* libgnome-2.0.pc.in: Depend on gconf-2.0.
